# tcc-20262

./: CMakeLists.txt  README.md
src/model/: Client.h  OptimizationConfig.h  Order.h  Priority.h  ProductionAllocation.h  date.h
src/optimization/: AllocationOptimizer.cpp  AllocationOptimizer.h  ProblemData.cpp  ProblemData.h  allocation_optimizer.h  problem_data.h
src/optimizer/: allocation_optimizer.h
src/repository/: IMoldRepository.h  IOptimizationConfigRepository.h  IOrderRepository.h  IProductionAllocationRepository.h
tests/: main.cpp
tests/instances/: test_instances.h
tests/results/: tests.txt
